Calendar: fix date alignment issue on iOS

--- a/packages/bpk-component-calendar/src/bpk-calendar.scss
+++ b/packages/bpk-component-calendar/src/bpk-calendar.scss
@@ -56,6 +56,7 @@
 .bpk-calendar-date {
   width: $bpk-calendar-day-size;
   height: $bpk-calendar-day-size;
+  padding: 0;
   border: none;
   border-radius: $bpk-border-radius-pill;
   background-color: $bpk-calendar-day-background-color;
